prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/trailing_block_comment.nut
// EXPECT_ERROR: "in comment"
/* this comment is never closed
let x = 42
